pushing the userProfile task and michee's modal

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
+ .active-tv-font {
+  /* margin-top: 8px;
+  transform: scale(.8); */
+  font-family: "ArcadeFont", cursive !important;
+}
+
 html,
 body {
   padding: 0;
