--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,3 +61,10 @@ a {
 input{
   outline: none;
 }
+#headerText{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
